syntax = "proto3";

package user;

service UserService {
    rpc login (LoginUserRequest) returns (LoginUserResponse);
    rpc register (RegisterUserRequest) returns (RegisterUserResponse);
    rpc verifyOtp (VerifyOtpUserRequest) returns (VerifyOtpUserResponse);
    rpc googleLogin (GoogleLoginUserRequest) returns (GoogleLoginUserResponse);
}

// Shared messages
message UserData {
    string id = 1;
    string username = 2;
    string email = 3;
    string phone = 4;
    string profile_picture = 5;
    string password = 6;
    string createdAt = 7;
    string about = 8;
    bool isBlocked = 9;
    repeated Course myCourse = 10;
}

message Course {
    string courseId = 1;
    string date = 2;
}

// Request and response for Google login
message GoogleLoginUserRequest {
    string email = 1;
    string fullname = 2;
}
message GoogleLoginUserResponse {
    bool success = 1;
    string message = 2;
    UserData user_data = 3;
}

// Request and response for OTP verification
message VerifyOtpUserRequest {
    string otp = 1;
    string id = 2; // The ID of the temporary user
}
message VerifyOtpUserResponse {
    string message = 1;
    bool success = 2;
    UserData user_data = 3;
}

// Request and response for user registration
message RegisterUserRequest {
    string username = 1;  // Username of the user
    string email = 2;     // Email address of the user
    string password = 3;  // Password of the user
}
message RegisterUserResponse {
    string message = 1;     // Message to indicate the next step
    bool success = 2;       // Indicates if the registration was successful
    bool forgotPass = 3;    // Indicates if a password reset is required
    UserData userData = 4;  // Contains user data if registration is successful
    string tempId = 5;      // Temporary ID for the user session, if needed
}

// Request and response for user login
message LoginUserRequest {
    string email = 1;
    string password = 2;
}
message LoginUserResponse {
    bool success = 1;       
    string message = 2;     
    string role = 3;        
    UserData userData = 4;  // Contains user data after successful login
}
